Updated Building and Running Warcbase Under OS X (markdown)